Cminus Compiler/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> procedures
Rule 2     program -> declList procedures
Rule 3     procedures -> procedures procedureDecl
Rule 4     procedures -> procedureDecl
Rule 5     declList -> type identifierList SEMICOLON
Rule 6     declList -> declList type identifierList SEMICOLON
Rule 7     procedureDecl -> procedureHead procedureBody
Rule 8     procedureHead -> functionDecl declList
Rule 9     procedureHead -> functionDecl
Rule 10    functionDecl -> type IDENTIFIER LPAREN paramDeclList RPAREN LBRACE
Rule 11    functionDecl -> type IDENTIFIER LPAREN RPAREN LBRACE
Rule 12    procedureBody -> statementList RBRACE
Rule 13    paramDeclList -> type varDecl
Rule 14    paramDeclList -> paramDeclList COMMA type varDecl
Rule 15    identifierList -> varDecl
Rule 16    identifierList -> identifierList COMMA varDecl
Rule 17    varDecl -> IDENTIFIER
Rule 18    varDecl -> IDENTIFIER LBRACKET INTCON RBRACKET
Rule 19    varDecl -> IDENTIFIER LBRACKET CHARCON RBRACKET
Rule 20    type -> CHAR
Rule 21    type -> INT
Rule 22    type -> FLOAT
Rule 23    type -> VOID
Rule 24    statement -> assignment
Rule 25    statement -> ifStatement
Rule 26    statement -> whileStatement
Rule 27    statement -> ioStatement
Rule 28    statement -> returnStatement
Rule 29    statement -> exitStatement
Rule 30    statement -> compoundStatement
Rule 31    statement -> callStatement
Rule 32    callStatement -> IDENTIFIER LPAREN RPAREN SEMICOLON
Rule 33    callStatement -> IDENTIFIER LPAREN argList RPAREN SEMICOLON
Rule 34    assignment -> variable_def ASSIGN expr SEMICOLON
Rule 35    variable_def -> IDENTIFIER
Rule 36    variable_def -> IDENTIFIER LBRACKET expr RBRACKET
Rule 37    ifStatement -> IF testAndThen ELSE compoundStatement
Rule 38    ifStatement -> IF testAndThen
Rule 39    testAndThen -> test compoundStatement
Rule 40    test -> LPAREN expr RPAREN
Rule 41    whileStatement -> WHILE whileExpr statement
Rule 42    whileExpr -> LPAREN expr RPAREN
Rule 43    ioStatement -> READ LPAREN variable_def RPAREN SEMICOLON
Rule 44    ioStatement -> WRITE LPAREN expr RPAREN SEMICOLON
Rule 45    ioStatement -> WRITE LPAREN stringConstant RPAREN SEMICOLON
Rule 46    returnStatement -> RETURN expr SEMICOLON
Rule 47    exitStatement -> EXIT SEMICOLON
Rule 48    compoundStatement -> LBRACE statementList RBRACE
Rule 49    statementList -> statement
Rule 50    statementList -> statementList statement
Rule 51    expr -> simpleExpr
Rule 52    expr -> expr OR simpleExpr
Rule 53    expr -> expr AND simpleExpr
Rule 54    expr -> NOT simpleExpr
Rule 55    simpleExpr -> addExpr
Rule 56    simpleExpr -> simpleExpr EQ addExpr
Rule 57    simpleExpr -> simpleExpr NE addExpr
Rule 58    simpleExpr -> simpleExpr LE addExpr
Rule 59    simpleExpr -> simpleExpr LT addExpr
Rule 60    simpleExpr -> simpleExpr GE addExpr
Rule 61    simpleExpr -> simpleExpr GT addExpr
Rule 62    addExpr -> mulExpr
Rule 63    addExpr -> addExpr PLUS mulExpr
Rule 64    addExpr -> addExpr MINUS mulExpr
Rule 65    mulExpr -> factor
Rule 66    mulExpr -> mulExpr TIMES factor
Rule 67    mulExpr -> mulExpr DIVIDE factor
Rule 68    factor -> variable
Rule 69    factor -> constant
Rule 70    factor -> IDENTIFIER LPAREN RPAREN
Rule 71    factor -> IDENTIFIER LPAREN argList RPAREN
Rule 72    factor -> LPAREN expr RPAREN
Rule 73    variable -> IDENTIFIER
Rule 74    variable -> IDENTIFIER LBRACKET expr RBRACKET
Rule 75    stringConstant -> STRING
Rule 76    constant -> FLOATCON
Rule 77    constant -> INTCON
Rule 78    constant -> CHARCON
Rule 79    argList -> expr
Rule 80    argList -> argList COMMA expr

Terminals, with rules where they appear

AND                  : 53
ASSIGN               : 34
CHAR                 : 20
CHARCON              : 19 78
COMMA                : 14 16 80
DIVIDE               : 67
ELSE                 : 37
EQ                   : 56
EXIT                 : 47
FLOAT                : 22
FLOATCON             : 76
GE                   : 60
GT                   : 61
IDENTIFIER           : 10 11 17 18 19 32 33 35 36 70 71 73 74
IF                   : 37 38
INT                  : 21
INTCON               : 18 77
LBRACE               : 10 11 48
LBRACKET             : 18 19 36 74
LE                   : 58
LPAREN               : 10 11 32 33 40 42 43 44 45 70 71 72
LT                   : 59
MINUS                : 64
NE                   : 57
NOT                  : 54
OR                   : 52
PLUS                 : 63
RBRACE               : 12 48
RBRACKET             : 18 19 36 74
READ                 : 43
RETURN               : 46
RPAREN               : 10 11 32 33 40 42 43 44 45 70 71 72
SEMICOLON            : 5 6 32 33 34 43 44 45 46 47
STRING               : 75
TIMES                : 66
VOID                 : 23
WHILE                : 41
WRITE                : 44 45
error                : 

Nonterminals, with rules where they appear

addExpr              : 55 56 57 58 59 60 61 63 64
argList              : 33 71 80
assignment           : 24
callStatement        : 31
compoundStatement    : 30 37 39
constant             : 69
declList             : 2 6 8
exitStatement        : 29
expr                 : 34 36 40 42 44 46 52 53 72 74 79 80
factor               : 65 66 67
functionDecl         : 8 9
identifierList       : 5 6 16
ifStatement          : 25
ioStatement          : 27
mulExpr              : 62 63 64 66 67
paramDeclList        : 10 14
procedureBody        : 7
procedureDecl        : 3 4
procedureHead        : 7
procedures           : 1 2 3
program              : 0
returnStatement      : 28
simpleExpr           : 51 52 53 54 56 57 58 59 60 61
statement            : 41 49 50
statementList        : 12 48 50
stringConstant       : 45
test                 : 39
testAndThen          : 37 38
type                 : 5 6 10 11 13 14
varDecl              : 13 14 15 16
variable             : 68
variable_def         : 34 43
whileExpr            : 41
whileStatement       : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . procedures
    (2) program -> . declList procedures
    (3) procedures -> . procedures procedureDecl
    (4) procedures -> . procedureDecl
    (5) declList -> . type identifierList SEMICOLON
    (6) declList -> . declList type identifierList SEMICOLON
    (7) procedureDecl -> . procedureHead procedureBody
    (20) type -> . CHAR
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . VOID
    (8) procedureHead -> . functionDecl declList
    (9) procedureHead -> . functionDecl
    (10) functionDecl -> . type IDENTIFIER LPAREN paramDeclList RPAREN LBRACE
    (11) functionDecl -> . type IDENTIFIER LPAREN RPAREN LBRACE

    CHAR            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    VOID            shift and go to state 10

    program                        shift and go to state 1
    procedures                     shift and go to state 2
    declList                       shift and go to state 3
    procedureDecl                  shift and go to state 4
    type                           shift and go to state 5
    procedureHead                  shift and go to state 6
    functionDecl                   shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> procedures .
    (3) procedures -> procedures . procedureDecl
    (7) procedureDecl -> . procedureHead procedureBody
    (8) procedureHead -> . functionDecl declList
    (9) procedureHead -> . functionDecl
    (10) functionDecl -> . type IDENTIFIER LPAREN paramDeclList RPAREN LBRACE
    (11) functionDecl -> . type IDENTIFIER LPAREN RPAREN LBRACE
    (20) type -> . CHAR
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . VOID

    $end            reduce using rule 1 (program -> procedures .)
    CHAR            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    VOID            shift and go to state 10

    procedureDecl                  shift and go to state 12
    procedureHead                  shift and go to state 6
    functionDecl                   shift and go to state 11
    type                           shift and go to state 13

state 3

    (2) program -> declList . procedures
    (6) declList -> declList . type identifierList SEMICOLON
    (3) procedures -> . procedures procedureDecl
    (4) procedures -> . procedureDecl
    (20) type -> . CHAR
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . VOID
    (7) procedureDecl -> . procedureHead procedureBody
    (8) procedureHead -> . functionDecl declList
    (9) procedureHead -> . functionDecl
    (10) functionDecl -> . type IDENTIFIER LPAREN paramDeclList RPAREN LBRACE
    (11) functionDecl -> . type IDENTIFIER LPAREN RPAREN LBRACE

    CHAR            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    VOID            shift and go to state 10

    procedures                     shift and go to state 14
    type                           shift and go to state 15
    procedureDecl                  shift and go to state 4
    procedureHead                  shift and go to state 6
    functionDecl                   shift and go to state 11

state 4

    (4) procedures -> procedureDecl .

    CHAR            reduce using rule 4 (procedures -> procedureDecl .)
    INT             reduce using rule 4 (procedures -> procedureDecl .)
    FLOAT           reduce using rule 4 (procedures -> procedureDecl .)
    VOID            reduce using rule 4 (procedures -> procedureDecl .)
    $end            reduce using rule 4 (procedures -> procedureDecl .)


state 5

    (5) declList -> type . identifierList SEMICOLON
    (10) functionDecl -> type . IDENTIFIER LPAREN paramDeclList RPAREN LBRACE
    (11) functionDecl -> type . IDENTIFIER LPAREN RPAREN LBRACE
    (15) identifierList -> . varDecl
    (16) identifierList -> . identifierList COMMA varDecl
    (17) varDecl -> . IDENTIFIER
    (18) varDecl -> . IDENTIFIER LBRACKET INTCON RBRACKET
    (19) varDecl -> . IDENTIFIER LBRACKET CHARCON RBRACKET

    IDENTIFIER      shift and go to state 17

    identifierList                 shift and go to state 16
    varDecl                        shift and go to state 18

state 6

    (7) procedureDecl -> procedureHead . procedureBody
    (12) procedureBody -> . statementList RBRACE
    (49) statementList -> . statement
    (50) statementList -> . statementList statement
    (24) statement -> . assignment
    (25) statement -> . ifStatement
    (26) statement -> . whileStatement
    (27) statement -> . ioStatement
    (28) statement -> . returnStatement
    (29) statement -> . exitStatement
    (30) statement -> . compoundStatement
    (31) statement -> . callStatement
    (34) assignment -> . variable_def ASSIGN expr SEMICOLON
    (37) ifStatement -> . IF testAndThen ELSE compoundStatement
    (38) ifStatement -> . IF testAndThen
    (41) whileStatement -> . WHILE whileExpr statement
    (43) ioStatement -> . READ LPAREN variable_def RPAREN SEMICOLON
    (44) ioStatement -> . WRITE LPAREN expr RPAREN SEMICOLON
    (45) ioStatement -> . WRITE LPAREN stringConstant RPAREN SEMICOLON
    (46) returnStatement -> . RETURN expr SEMICOLON
    (47) exitStatement -> . EXIT SEMICOLON
    (48) compoundStatement -> . LBRACE statementList RBRACE
    (32) callStatement -> . IDENTIFIER LPAREN RPAREN SEMICOLON
    (33) callStatement -> . IDENTIFIER LPAREN argList RPAREN SEMICOLON
    (35) variable_def -> . IDENTIFIER
    (36) variable_def -> . IDENTIFIER LBRACKET expr RBRACKET

    IF              shift and go to state 31
    WHILE           shift and go to state 32
    READ            shift and go to state 33
    WRITE           shift and go to state 34
    RETURN          shift and go to state 35
    EXIT            shift and go to state 36
    LBRACE          shift and go to state 37
    IDENTIFIER      shift and go to state 38

    procedureBody                  shift and go to state 19
    statementList                  shift and go to state 20
    statement                      shift and go to state 21
    assignment                     shift and go to state 22
    ifStatement                    shift and go to state 23
    whileStatement                 shift and go to state 24
    ioStatement                    shift and go to state 25
    returnStatement                shift and go to state 26
    exitStatement                  shift and go to state 27
    compoundStatement              shift and go to state 28
    callStatement                  shift and go to state 29
    variable_def                   shift and go to state 30

state 7

    (20) type -> CHAR .

    IDENTIFIER      reduce using rule 20 (type -> CHAR .)


state 8

    (21) type -> INT .

    IDENTIFIER      reduce using rule 21 (type -> INT .)


state 9

    (22) type -> FLOAT .

    IDENTIFIER      reduce using rule 22 (type -> FLOAT .)


state 10

    (23) type -> VOID .

    IDENTIFIER      reduce using rule 23 (type -> VOID .)


state 11

    (8) procedureHead -> functionDecl . declList
    (9) procedureHead -> functionDecl .
    (5) declList -> . type identifierList SEMICOLON
    (6) declList -> . declList type identifierList SEMICOLON
    (20) type -> . CHAR
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . VOID

    IF              reduce using rule 9 (procedureHead -> functionDecl .)
    WHILE           reduce using rule 9 (procedureHead -> functionDecl .)
    READ            reduce using rule 9 (procedureHead -> functionDecl .)
    WRITE           reduce using rule 9 (procedureHead -> functionDecl .)
    RETURN          reduce using rule 9 (procedureHead -> functionDecl .)
    EXIT            reduce using rule 9 (procedureHead -> functionDecl .)
    LBRACE          reduce using rule 9 (procedureHead -> functionDecl .)
    IDENTIFIER      reduce using rule 9 (procedureHead -> functionDecl .)
    CHAR            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    VOID            shift and go to state 10

    declList                       shift and go to state 39
    type                           shift and go to state 40

state 12

    (3) procedures -> procedures procedureDecl .

    CHAR            reduce using rule 3 (procedures -> procedures procedureDecl .)
    INT             reduce using rule 3 (procedures -> procedures procedureDecl .)
    FLOAT           reduce using rule 3 (procedures -> procedures procedureDecl .)
    VOID            reduce using rule 3 (procedures -> procedures procedureDecl .)
    $end            reduce using rule 3 (procedures -> procedures procedureDecl .)


state 13

    (10) functionDecl -> type . IDENTIFIER LPAREN paramDeclList RPAREN LBRACE
    (11) functionDecl -> type . IDENTIFIER LPAREN RPAREN LBRACE

    IDENTIFIER      shift and go to state 41


state 14

    (2) program -> declList procedures .
    (3) procedures -> procedures . procedureDecl
    (7) procedureDecl -> . procedureHead procedureBody
    (8) procedureHead -> . functionDecl declList
    (9) procedureHead -> . functionDecl
    (10) functionDecl -> . type IDENTIFIER LPAREN paramDeclList RPAREN LBRACE
    (11) functionDecl -> . type IDENTIFIER LPAREN RPAREN LBRACE
    (20) type -> . CHAR
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . VOID

    $end            reduce using rule 2 (program -> declList procedures .)
    CHAR            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    VOID            shift and go to state 10

    procedureDecl                  shift and go to state 12
    procedureHead                  shift and go to state 6
    functionDecl                   shift and go to state 11
    type                           shift and go to state 13

state 15

    (6) declList -> declList type . identifierList SEMICOLON
    (10) functionDecl -> type . IDENTIFIER LPAREN paramDeclList RPAREN LBRACE
    (11) functionDecl -> type . IDENTIFIER LPAREN RPAREN LBRACE
    (15) identifierList -> . varDecl
    (16) identifierList -> . identifierList COMMA varDecl
    (17) varDecl -> . IDENTIFIER
    (18) varDecl -> . IDENTIFIER LBRACKET INTCON RBRACKET
    (19) varDecl -> . IDENTIFIER LBRACKET CHARCON RBRACKET

    IDENTIFIER      shift and go to state 17

    identifierList                 shift and go to state 42
    varDecl                        shift and go to state 18

state 16

    (5) declList -> type identifierList . SEMICOLON
    (16) identifierList -> identifierList . COMMA varDecl

    SEMICOLON       shift and go to state 43
    COMMA           shift and go to state 44


state 17

    (10) functionDecl -> type IDENTIFIER . LPAREN paramDeclList RPAREN LBRACE
    (11) functionDecl -> type IDENTIFIER . LPAREN RPAREN LBRACE
    (17) varDecl -> IDENTIFIER .
    (18) varDecl -> IDENTIFIER . LBRACKET INTCON RBRACKET
    (19) varDecl -> IDENTIFIER . LBRACKET CHARCON RBRACKET

    LPAREN          shift and go to state 45
    SEMICOLON       reduce using rule 17 (varDecl -> IDENTIFIER .)
    COMMA           reduce using rule 17 (varDecl -> IDENTIFIER .)
    LBRACKET        shift and go to state 46


state 18

    (15) identifierList -> varDecl .

    SEMICOLON       reduce using rule 15 (identifierList -> varDecl .)
    COMMA           reduce using rule 15 (identifierList -> varDecl .)


state 19

    (7) procedureDecl -> procedureHead procedureBody .

    CHAR            reduce using rule 7 (procedureDecl -> procedureHead procedureBody .)
    INT             reduce using rule 7 (procedureDecl -> procedureHead procedureBody .)
    FLOAT           reduce using rule 7 (procedureDecl -> procedureHead procedureBody .)
    VOID            reduce using rule 7 (procedureDecl -> procedureHead procedureBody .)
    $end            reduce using rule 7 (procedureDecl -> procedureHead procedureBody .)


state 20

    (12) procedureBody -> statementList . RBRACE
    (50) statementList -> statementList . statement
    (24) statement -> . assignment
    (25) statement -> . ifStatement
    (26) statement -> . whileStatement
    (27) statement -> . ioStatement
    (28) statement -> . returnStatement
    (29) statement -> . exitStatement
    (30) statement -> . compoundStatement
    (31) statement -> . callStatement
    (34) assignment -> . variable_def ASSIGN expr SEMICOLON
    (37) ifStatement -> . IF testAndThen ELSE compoundStatement
    (38) ifStatement -> . IF testAndThen
    (41) whileStatement -> . WHILE whileExpr statement
    (43) ioStatement -> . READ LPAREN variable_def RPAREN SEMICOLON
    (44) ioStatement -> . WRITE LPAREN expr RPAREN SEMICOLON
    (45) ioStatement -> . WRITE LPAREN stringConstant RPAREN SEMICOLON
    (46) returnStatement -> . RETURN expr SEMICOLON
    (47) exitStatement -> . EXIT SEMICOLON
    (48) compoundStatement -> . LBRACE statementList RBRACE
    (32) callStatement -> . IDENTIFIER LPAREN RPAREN SEMICOLON
    (33) callStatement -> . IDENTIFIER LPAREN argList RPAREN SEMICOLON
    (35) variable_def -> . IDENTIFIER
    (36) variable_def -> . IDENTIFIER LBRACKET expr RBRACKET

    RBRACE          shift and go to state 47
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    READ            shift and go to state 33
    WRITE           shift and go to state 34
    RETURN          shift and go to state 35
    EXIT            shift and go to state 36
    LBRACE          shift and go to state 37
    IDENTIFIER      shift and go to state 38

    statement                      shift and go to state 48
    assignment                     shift and go to state 22
    ifStatement                    shift and go to state 23
    whileStatement                 shift and go to state 24
    ioStatement                    shift and go to state 25
    returnStatement                shift and go to state 26
    exitStatement                  shift and go to state 27
    compoundStatement              shift and go to state 28
    callStatement                  shift and go to state 29
    variable_def                   shift and go to state 30

state 21

    (49) statementList -> statement .

    RBRACE          reduce using rule 49 (statementList -> statement .)
    IF              reduce using rule 49 (statementList -> statement .)
    WHILE           reduce using rule 49 (statementList -> statement .)
    READ            reduce using rule 49 (statementList -> statement .)
    WRITE           reduce using rule 49 (statementList -> statement .)
    RETURN          reduce using rule 49 (statementList -> statement .)
    EXIT            reduce using rule 49 (statementList -> statement .)
    LBRACE          reduce using rule 49 (statementList -> statement .)
    IDENTIFIER      reduce using rule 49 (statementList -> statement .)


state 22

    (24) statement -> assignment .

    RBRACE          reduce using rule 24 (statement -> assignment .)
    IF              reduce using rule 24 (statement -> assignment .)
    WHILE           reduce using rule 24 (statement -> assignment .)
    READ            reduce using rule 24 (statement -> assignment .)
    WRITE           reduce using rule 24 (statement -> assignment .)
    RETURN          reduce using rule 24 (statement -> assignment .)
    EXIT            reduce using rule 24 (statement -> assignment .)
    LBRACE          reduce using rule 24 (statement -> assignment .)
    IDENTIFIER      reduce using rule 24 (statement -> assignment .)


state 23

    (25) statement -> ifStatement .

    RBRACE          reduce using rule 25 (statement -> ifStatement .)
    IF              reduce using rule 25 (statement -> ifStatement .)
    WHILE           reduce using rule 25 (statement -> ifStatement .)
    READ            reduce using rule 25 (statement -> ifStatement .)
    WRITE           reduce using rule 25 (statement -> ifStatement .)
    RETURN          reduce using rule 25 (statement -> ifStatement .)
    EXIT            reduce using rule 25 (statement -> ifStatement .)
    LBRACE          reduce using rule 25 (statement -> ifStatement .)
    IDENTIFIER      reduce using rule 25 (statement -> ifStatement .)


state 24

    (26) statement -> whileStatement .

    RBRACE          reduce using rule 26 (statement -> whileStatement .)
    IF              reduce using rule 26 (statement -> whileStatement .)
    WHILE           reduce using rule 26 (statement -> whileStatement .)
    READ            reduce using rule 26 (statement -> whileStatement .)
    WRITE           reduce using rule 26 (statement -> whileStatement .)
    RETURN          reduce using rule 26 (statement -> whileStatement .)
    EXIT            reduce using rule 26 (statement -> whileStatement .)
    LBRACE          reduce using rule 26 (statement -> whileStatement .)
    IDENTIFIER      reduce using rule 26 (statement -> whileStatement .)


state 25

    (27) statement -> ioStatement .
